# spicetrader

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile
api/app/: db.py  main.py
scripts/: __init__.py  smoke_dry_run.py  verify_dry_run.py
src/: __init__.py  adaptive_bot.py  bot.py  coin_trader.py  config_utils.py  database.py  fee_calculator.py  indicators.py  market_data.py  multi_coin_bot.py  position_sizing.py  report.py
src/analysis/: __init__.py  market_analyzer.py  market_condition.py  strategy_selector.py
src/kraken/: __init__.py  client.py
src/strategies/: __init__.py  base.py  breakout.py  grid_trading.py  macd.py  mean_reversion.py  sma_crossover.py
tests/: test_client.py  test_market_data.py  test_order_normalization.py  test_position_sizing.py  test_strategies_ohlc.py
ui/: Dockerfile  package.json  tsconfig.json
ui/src/routes/: +page.svelte
ui/src/routes/api/overview/: +server.ts
