[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spicetrader"
version = "1.0.0"
description = "Adaptive multi-strategy trading bot for Kraken"
readme = "README.md"
requires-python = ">=3.10"

# Keep runtime deps in requirements.txt for now.
# This project metadata is primarily to make `pip install -e .` work cleanly.

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "scripts*"]
